testdata/baselines/reference/submodule/conformance/nodeModulesDeclarationEmitWithPackageExports(module=nodenext).errors.txt
error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'package.json'. Supply the `rootDir` compiler option to disambiguate.
index.cts(2,22): error TS2307: Cannot find module 'package/cjs' or its corresponding type declarations.
index.cts(3,22): error TS2307: Cannot find module 'package/mjs' or its corresponding type declarations.
index.cts(4,23): error TS2307: Cannot find module 'package' or its corresponding type declarations.
index.mts(2,22): error TS2307: Cannot find module 'package/cjs' or its corresponding type declarations.
index.mts(3,22): error TS2307: Cannot find module 'package/mjs' or its corresponding type declarations.
index.mts(4,23): error TS2307: Cannot find module 'package' or its corresponding type declarations.
index.ts(2,22): error TS2307: Cannot find module 'package/cjs' or its corresponding type declarations.
index.ts(3,22): error TS2307: Cannot find module 'package/mjs' or its corresponding type declarations.
index.ts(4,23): error TS2307: Cannot find module 'package' or its corresponding type declarations.
node_modules/inner/index.d.cts(5,1): error TS1036: Statements are not allowed in ambient contexts.
node_modules/inner/index.d.mts(5,1): error TS1036: Statements are not allowed in ambient contexts.
node_modules/inner/index.d.ts(5,1): error TS1036: Statements are not allowed in ambient contexts.


!!! error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'package.json'. Supply the `rootDir` compiler option to disambiguate.
==== index.ts (3 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'package/cjs' or its corresponding type declarations.
    import * as mjs from "package/mjs";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'package/mjs' or its corresponding type declarations.
    import * as type from "package";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'package' or its corresponding type declarations.
    export const a = cjs;
    export const b = mjs;
    export const c = type;
    import * as cjsi from "inner/cjs";
    import * as mjsi from "inner/mjs";
    import * as typei from "inner";
    export const d = cjsi;
    export const e = mjsi;
    export const f = typei;
==== index.mts (3 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'package/cjs' or its corresponding type declarations.
    import * as mjs from "package/mjs";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'package/mjs' or its corresponding type declarations.
    import * as type from "package";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'package' or its corresponding type declarations.
    export const a = cjs;
    export const b = mjs;
    export const c = type;
    import * as cjsi from "inner/cjs";
    import * as mjsi from "inner/mjs";
    import * as typei from "inner";
    export const d = cjsi;
    export const e = mjsi;
    export const f = typei;
==== index.cts (3 errors) ====
    // cjs format file
    import * as cjs from "package/cjs";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'package/cjs' or its corresponding type declarations.
    import * as mjs from "package/mjs";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'package/mjs' or its corresponding type declarations.
    import * as type from "package";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'package' or its corresponding type declarations.
    export const a = cjs;
    export const b = mjs;
    export const c = type;
    import * as cjsi from "inner/cjs";
    import * as mjsi from "inner/mjs";
    import * as typei from "inner";
    export const d = cjsi;
    export const e = mjsi;
    export const f = typei;
==== node_modules/inner/index.d.ts (1 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs";
    import * as mjs from "inner/mjs";
    import * as type from "inner";
    cjs;
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    mjs;
    type;
    export const cjsMain = true;
==== node_modules/inner/index.d.mts (1 errors) ====
    // esm format file
    import * as cjs from "inner/cjs";
    import * as mjs from "inner/mjs";
    import * as type from "inner";
    cjs;
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    mjs;
    type;
    export const esm = true;
==== node_modules/inner/index.d.cts (1 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs";
    import * as mjs from "inner/mjs";
    import * as type from "inner";
    cjs;
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    mjs;
    type;
    export const cjsNonmain = true;
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": {
            "./cjs": "./index.cjs",
            "./mjs": "./index.mjs",
            ".": "./index.js"
        }
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./cjs": "./index.cjs",
            "./mjs": "./index.mjs",
            ".": "./index.js"
        }
    }